--- a/Data Science/TensorFlow/Hand Written Digit Recognization.ipynb
+++ b/Data Science/TensorFlow/Hand Written Digit Recognization.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1b71d336190>"
+       "<matplotlib.image.AxesImage at 0x250c8958090>"
       ]
      },
      "execution_count": 4,
@@ -88,17 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "4f5004eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1b721bb4810>"
+       "<matplotlib.image.AxesImage at 0x250cbe87910>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "c9d3b275",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "          0,   0]], dtype=uint8)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "c304b141",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "((60000, 784), (10000, 784))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,19 +357,19 @@
      "output_type": "stream",
      "text": [
       "w.shape = (784, 10):\n",
-      "[[ 0.00678139  0.06129531 -0.0679886  ... -0.0867111   0.04989124\n",
-      "   0.05894046]\n",
-      " [ 0.06061553 -0.00121296  0.00193767 ... -0.06831867 -0.06129647\n",
-      "   0.03220945]\n",
-      " [ 0.06503934  0.07323702 -0.02550151 ...  0.05069239 -0.06127794\n",
-      "   0.06975298]\n",
+      "[[-0.02036515  0.03390111 -0.06601685 ...  0.05802452  0.00613449\n",
+      "  -0.02848567]\n",
+      " [ 0.07836976 -0.02274276 -0.05794188 ...  0.00927331 -0.00250685\n",
+      "   0.03729785]\n",
+      " [ 0.0165731   0.03976823  0.05549585 ... -0.0378115   0.05158602\n",
+      "  -0.00872014]\n",
       " ...\n",
-      " [ 0.00138959  0.03281265 -0.08086802 ...  0.0790545   0.06974735\n",
-      "   0.02739097]\n",
-      " [ 0.01273397 -0.06429245 -0.082729   ... -0.03596798  0.06724504\n",
-      "   0.00781129]\n",
-      " [-0.06083197  0.00304305  0.01140638 ... -0.03998699  0.03286584\n",
-      "   0.05241207]]\n",
+      " [ 0.04843735  0.03477792  0.07434132 ...  0.0850702  -0.01029151\n",
+      "   0.03360848]\n",
+      " [ 0.04327165 -0.06559891  0.01704952 ... -0.05553967  0.04908177\n",
+      "   0.03363626]\n",
+      " [-0.07681978  0.06156621  0.00429636 ...  0.05793216 -0.04225034\n",
+      "  -0.05237265]]\n",
       "\n",
       " b.shape = (10,):\n",
       "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
@@ -392,21 +392,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 45.1693 - accuracy: 0.8543\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 45.0441 - accuracy: 0.8521\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.2734 - accuracy: 0.8754\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 49.7902 - accuracy: 0.8769\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.6688 - accuracy: 0.8820\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.2003 - accuracy: 0.8802\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.6030 - accuracy: 0.8849\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.7285 - accuracy: 0.8842\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 50.5658 - accuracy: 0.8851\n"
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 50.7607 - accuracy: 0.8863\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x27850a1fa50>"
+       "<keras.src.callbacks.History at 0x250c88fed10>"
       ]
      },
      "execution_count": 12,
@@ -430,21 +430,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.3824 - accuracy: 0.8941\n",
+      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.3921 - accuracy: 0.8899\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.2725 - accuracy: 0.9248\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2737 - accuracy: 0.9230\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.2533 - accuracy: 0.9304\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2526 - accuracy: 0.9288\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.2451 - accuracy: 0.9315\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2451 - accuracy: 0.9317\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.2476 - accuracy: 0.9312\n"
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2476 - accuracy: 0.9307\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x27854a70450>"
+       "<keras.src.callbacks.History at 0x250d0f83f90>"
       ]
      },
      "execution_count": 13,
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "cafecb35",
    "metadata": {},
    "outputs": [
@@ -471,24 +471,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 9s 4ms/step - loss: 0.4176 - accuracy: 0.8930\n",
+      "1875/1875 [==============================] - 13s 6ms/step - loss: 0.4217 - accuracy: 0.8918\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2029 - accuracy: 0.9415\n",
+      "1875/1875 [==============================] - 9s 5ms/step - loss: 0.2019 - accuracy: 0.9423\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1505 - accuracy: 0.9563\n",
+      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1494 - accuracy: 0.9575\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1187 - accuracy: 0.9658\n",
+      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1174 - accuracy: 0.9669\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0968 - accuracy: 0.9721\n"
+      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0958 - accuracy: 0.9732\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x27802524fd0>"
+       "<keras.src.callbacks.History at 0x250d11489d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
